test/should-fail/exploit-4.j
globals
    integer what
endglobals

function Magic takes nothing returns nothing
    local integer array what
endfunction

function test takes nothing returns nothing
    set what = 1
endfunction